--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "test-slider",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
