--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "core-js": "^3.8.3",
